Theme renamed and made available seperately.

--- a/config/install/block.block.horizontalmenu_2.yml
+++ b/config/install/block.block.horizontalmenu_2.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - responsive_menu
   theme:
-    - stratos
+    - stratoserp_theme
 id: horizontalmenu_2
-theme: stratos
+theme: stratoserp_theme
 region: navigation
 weight: 0
 provider: null
