--- a/config/install/block.block.stratos_tabs.yml
+++ b/config/install/block.block.stratos_tabs.yml
@@ -2,11 +2,11 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - stratos
+    - stratoserp_theme
 id: stratos_tabs
-theme: stratos
+theme: stratoserp_theme
 region: content
-weight: -4
+weight: -3
 provider: null
 plugin: local_tasks_block
 settings:
