Bringing things back into line and working.

--- a/composer.json
+++ b/composer.json
@@ -1,56 +1,150 @@
 {
-  "name": "singularo/stratoserp_base",
-  "description": "StratosERP installation profile",
-  "type": "drupal-profile",
-  "homepage": "https://github.com/singularo/stratoserp_base",
-  "license": "GPL-2.0+",
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://packages.drupal.org/8"
+    "name": "singularo/stratoserp_base",
+    "description": "StratosERP installation profile",
+    "type": "drupal-profile",
+    "homepage": "https://github.com/singularo/stratoserp_base",
+    "license": "GPL-2.0+",
+    "repositories": [
+        { "type": "composer", "url": "https://packages.drupal.org/8" },
+        { "type": "composer", "url": "https://asset-packagist.org" },
+        { "type": "vcs", "url": "https://github.com/previousnext/drush_cmi_tools.git" },
+        { "type": "vcs", "url": "https://github.com/singularo/flat_comments.git" }
+    ],
+    "require": {
+        "composer-plugin-api": "^1.0",
+        "composer/installers": "^1.2",
+        "cweagans/composer-patches": "~1.0",
+        "drupal/chartjs_api": "1.x-dev",
+        "drupal/chosen": "^2.7",
+        "drupal/core": "^8.7",
+        "drupal/drush-cmi-tools": "dev-8.x-2.x",
+        "drupal/duration_field": "2.*@dev",
+        "drupal/dynamic_entity_reference": "2.*@dev",
+        "drupal/entity_reference_revisions": "1.*@dev",
+        "drupal/extra_field": "^1.0",
+        "drupal/eva": "^2.0",
+        "drupal/facets": "^1.3",
+        "drupal/field_group": "3.x-dev",
+        "drupal/flat_comments": "dev-master",
+        "drupal/fullcalendar_view": "2.*@dev",
+        "drupal/geolocation": "1.*@dev",
+        "drupal/hook_event_dispatcher": "1.*@dev",
+        "drupal/json_field": "^1.0@RC",
+        "drupal/libraries": "3.*@dev",
+        "drupal/linkit": "5.*@dev",
+        "drupal/log_stdout": "1.*@dev",
+        "drupal/multiple_fields_remove_button": "1.*@dev",
+        "drupal/nice_menus": "^1.0@beta",
+        "drupal/paragraphs": "1.x-dev",
+        "drupal/pathauto": "1.*",
+        "drupal/pdf_api": "^1.0",
+        "drupal/printable": "1.x-dev",
+        "drupal/realname": "^1.0",
+        "drupal/reference_table_formatter": "1.*@dev",
+        "drupal/search_api": "^1.12",
+        "drupal/serial": "1.x-dev",
+        "drupal/simplify": "1.*@dev",
+        "drupal/themable_forms": "1.*@dev",
+        "drupal/token": "1.*",
+        "drupal/tvi": "^1.0@beta",
+        "drupal/twig_tweak": "2.*",
+        "drupal/views_aggregator": "1.x-dev",
+        "drupal/views_bulk_operations": "^2.5",
+        "drupal/views_data_export": "1.*@dev",
+        "drupal/webform": "5.*@dev",
+        "drupal/webform_extra_field": "^1.0@alpha",
+        "drupal/webform_views": "^5.0@alpha",
+        "drupal/xero": "1.*@dev",
+        "drupal/bootstrap": "3.*@dev",
+        "drush/drush": "^9.6",
+        "ext-json": "*",
+        "ext-mbstring": "^7.2",
+        "harvesthq/chosen": "^1.8",
+        "oomphinc/composer-installers-extender": "^1.1",
+        "vlucas/phpdotenv": "^2.4",
+        "webflo/drupal-finder": "^1.0.0",
+        "webmozart/path-util": "^2.3",
+        "zaporylie/composer-drupal-optimizations": "^1.0"
+    },
+    "conflict": {
+        "drupal/drupal": "*"
+    },
+    "minimum-stability": "dev",
+    "config": {
+      "bin-dir": "bin/",
+      "discard-changes": true,
+      "sort-packages": true
+    },
+    "extra": {
+        "patchLevel": {
+            "drupal/core": "-p2"
+        },
+        "installer-types": [
+            "bower-asset",
+            "npm-asset",
+            "library"
+        ],
+        "installer-paths": {
+            "web/core": [
+                "type:drupal-core"
+            ],
+            "web/libraries/{$name}": [
+                "type:drupal-library",
+                "type:bower-asset",
+                "type:npm-asset",
+                "harvesthq/chosen"
+            ],
+            "web/modules/contrib/{$name}": [
+                "type:drupal-module"
+            ],
+            "web/profiles/contrib/{$name}": [
+                "type:drupal-profile"
+            ],
+            "web/themes/contrib/{$name}": [
+                "type:drupal-theme"
+            ],
+            "drush/contrib/{$name}": [
+                "type:drupal-drush"
+            ]
+        },
+        "composer-exit-on-patch-failure": true,
+        "patches": {
+            "drupal/chartjs_api": {
+                "Line graph coloring doesn't work - fixed with upgrade to 2.8.0": "https://www.drupal.org/files/issues/2019-05-09/3053642-2.chartjs_api.Line-graph-coloring-doesnt-work--fixed-with-upgrade-to-280.patch"
+            },
+            "drupal/chosen": {
+                "Chosen field should force height to auto": "https://www.drupal.org/files/issues/Issue-2839655-by-hass-Chosen-field-should-force-heig.patch"
+            },
+            "drupal/core": {
+                "Field layouts don't seem to work for embedded forms": "./patches/2991772-13.patch",
+                "Add __toString to the entity Query class": "https://www.drupal.org/files/issues/2018-07-02/2902311-16.patch",
+                "Migrate exceptions need line details": "https://www.drupal.org/files/issues/2018-05-04/2969551.drupal.migrate-exceptions-missing-file-line.patch"
+            },
+            "drupal/dynamic_entity_reference": {
+                "Allow users to select a bundle": "https://www.drupal.org/files/issues/2018-10-28/dynamic_entity_reference-select-per_bundle-2381991-9.patch",
+                "List config entities": "https://www.drupal.org/files/issues/dynamic_entity_reference-list-config-entities-in-field-storage-settings-2932062-2.patch"
+            },
+            "drupal/extra_field": {
+                "Allow form extra fields to be declared through ExtraField plugins": "https://www.drupal.org/files/issues/2019-01-17/extra_field-using_in_forms-2882061-24.patch"
+            },
+            "drupal/paragraphs": {
+                "Apply layouts to the paragraphs form widget": "https://www.drupal.org/files/issues/2018-11-01/paragraphs-field_layout_support-2991540-7.patch"
+            },
+            "drupal/pdf_api": {
+                "Set MPDF generation directory to drupals tmp directory": "https://www.drupal.org/files/issues/2019-01-31/tmp-directory-3016161-4.patch"
+            },
+            "drupal/printable": {
+                "Set default print storage path": "./patches/printable.patch"
+            },
+            "drupal/serial": {
+                "Support migrating existing values": "./patches/2946075.patch"
+            },
+            "drupal/views_bulk_operations": {
+                "Input/Label Javascript broken for other themes": "https://www.drupal.org/files/issues/2019-02-21/3034916-input-label-javascript-broken-for-other-themes-2.patch"
+            },
+            "drupal/views_data_export": {
+                "Batch support": "https://drupal.org/files/issues/2018-08-16/2789531-144.patch"
+            }
+        }
     }
-  ],
-  "require": {
-    "drupal/calendar": "1.*@dev",
-    "drupal/core": "8.7.*",
-    "drupal/duration_field": "2.*@dev",
-    "drupal/entity_reference_revisions": "1.*@dev",
-    "drupal/eva": "^2.0",
-    "drupal/field_group": "3.x-dev",
-    "drupal/geolocation": "1.*@dev",
-    "drupal/paragraphs": "1.x-dev",
-    "drupal/reference_table_formatter": "1.*@dev",
-    "drupal/serial": "1.*@dev",
-    "drupal/views_data_export": "1.*@dev",
-    "drupal/views_templates": "1.*@dev",
-    "drupal/xero": "1.*@dev",
-    "drush/drush": "8.*"
-  },
-  "minimum-stability": "dev",
-  "config": {
-    "bin-dir": "bin/",
-    "discard-changes": true
-  },
-  "extra": {
-    "installer-paths": {
-      "web/core": [
-        "type:drupal-core"
-      ],
-      "web/libraries/{$name}": [
-        "type:drupal-library"
-      ],
-      "web/modules/contrib/{$name}": [
-        "type:drupal-module"
-      ],
-      "web/profiles/contrib/{$name}": [
-        "type:drupal-profile"
-      ],
-      "web/themes/contrib/{$name}": [
-        "type:drupal-theme"
-      ],
-      "drush/contrib/{$name}": [
-        "type:drupal-drush"
-      ]
-    }
-  }
 }
