--- a/config/install/block.block.stratoserpnavigation.yml
+++ b/config/install/block.block.stratoserpnavigation.yml
@@ -15,5 +15,5 @@ settings:
   id: navigation_block
   label: 'Stratos ERP Navigation'
   provider: se_core
-  label_display: visible
+  label_display: '0'
 visibility: {  }
