--- a/config/install/core.entity_view_display.user.user.default.yml
+++ b/config/install/core.entity_view_display.user.user.default.yml
@@ -3,22 +3,133 @@ status: true
 dependencies:
   config:
     - field.field.user.user.user_picture
+    - image.style.thumbnail
   module:
+    - field_group
+    - field_layout
     - image
+    - layout_discovery
     - user
+third_party_settings:
+  field_layout:
+    id: layout_onecol
+    settings: {  }
+  field_group:
+    group_user_tabs:
+      children:
+        - group_user_tab_tickets
+        - group_user_tab_invoices
+        - group_user_tab_timekeeping
+        - group_user_tab_quotes
+      parent_name: ''
+      weight: 2
+      format_type: tabs
+      format_settings:
+        id: ''
+        classes: ''
+        direction: vertical
+      label: 'User tabs'
+      region: content
+    group_user_tab_tickets:
+      children:
+        - extra_field_ticket_statistics_user
+      parent_name: group_user_tabs
+      weight: 20
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+      label: Tickets
+      region: content
+    group_user_tab_invoices:
+      children:
+        - extra_field_invoice_statistics_user
+      parent_name: group_user_tabs
+      weight: 21
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+      label: Invoices
+      region: content
+    group_user_tab_timekeeping:
+      children:
+        - extra_field_timekeeping_statistics_user
+      parent_name: group_user_tabs
+      weight: 22
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+      label: Timekeeping
+      region: content
+    group_user_tab_quotes:
+      children:
+        - extra_field_quote_statistics_user
+      parent_name: group_user_tabs
+      weight: 23
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+      label: Quotes
+      region: content
 id: user.user.default
 targetEntityType: user
 bundle: user
 mode: default
 content:
-  member_for:
-    weight: 5
+  extra_field_invoice_statistics_user:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  extra_field_quote_statistics_user:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  extra_field_ticket_statistics_user:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  extra_field_timekeeping_statistics_user:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  extra_field_user_invoice_statistics:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  extra_field_user_ticket_statistics:
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  realname:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   user_picture:
     type: image
-    weight: 0
+    weight: 1
     settings:
       image_style: thumbnail
       image_link: content
     third_party_settings: {  }
     label: hidden
-hidden: {  }
+    region: content
+hidden:
+  member_for: true
