--- a/config/install/editor.editor.basic_html.yml
+++ b/config/install/editor.editor.basic_html.yml
@@ -16,6 +16,8 @@ settings:
           items:
             - Bold
             - Italic
+            - Outdent
+            - Indent
         -
           name: Linking
           items:
@@ -39,14 +41,20 @@ settings:
           name: Tools
           items:
             - Source
+            - Maximize
   plugins:
+    drupallink:
+      linkit_enabled: false
+      linkit_profile: ''
     stylescombo:
       styles: ''
+    language:
+      language_list: un
 image_upload:
   status: true
   scheme: public
   directory: inline-images
   max_size: ''
   max_dimensions:
-    width: 0
-    height: 0
+    width: null
+    height: null
