--- a/config/install/simplify.global.yml
+++ b/config/install/simplify.global.yml
@@ -1,12 +1,12 @@
 simplify_admin: false
 simplify_nodes_global:
   author: author
-  format: format
   options: options
   revision_information: revision_information
   comment: comment
   menu: menu
   path_settings: path_settings
+  format: '0'
 simplify_users_global:
   status: status
   timezone: timezone
