--- a/stratoserp_base.info.yml
+++ b/stratoserp_base.info.yml
@@ -15,6 +15,7 @@ dependencies:
   - contact
   - datetime
   - datetime_range
+  - dynamic_page_cache
   - editor
   - entity_reference
   - field_layout
@@ -29,6 +30,7 @@ dependencies:
   - node
   - options
   - path
+  - page_cache
   - search
   - taxonomy
   - telephone
@@ -42,10 +44,12 @@ dependencies:
   - chartjs_api
   - chosen
   - chosen_field
+  - ckeditor_mentions
+  - ckeditorheight
+  - date_popup
   - drush_cmi_tools
   - duration_field
   - dynamic_entity_reference
-  - entity_reference_revisions
   - eva
   - extra_field
   - facets
@@ -60,11 +64,9 @@ dependencies:
   - log_stdout
   - multiple_fields_remove_button
   - nice_menus
-  - paragraphs
   - pdf_api
   - printable
   - realname
-  - reference_table_formatter
   - serial
   - simplify
   - token
@@ -82,8 +84,9 @@ dependencies:
   - se_customer
   - se_goods_receipt
   - se_invoice
-  - se_item
+  - se_item_line
   - se_payment
+  - se_payment_line
   - se_purchase_order
   - se_quote
   - se_supplier
@@ -100,10 +103,6 @@ dependencies:
   - se_service
   - se_stock
   - se_recurring
-
-  # Paragraph types
-  - se_items
-  - se_payments
 
   # Integrations
   - se_xero
