Adding missing modules to composer.json.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
         "cweagans/composer-patches": "~1.0",
         "drupal/chartjs_api": "dev-1.x",
         "drupal/chosen": "^2.7",
+        "drupal/ckeditor_mentions": "1.*@dev",
+        "drupal/ckeditorheight": "dev-1.x",
         "drupal/core": "^8.7",
+        "drupal/date_popup": "^1.0",
         "drupal/drush-cmi-tools": "dev-8.x-2.x",
         "drupal/duration_field": "2.*@dev",
         "drupal/dynamic_entity_reference": "2.*@dev",
