--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,13 @@
         { "type": "vcs", "url": "https://github.com/singularo/flat_comments.git" }
     ],
     "require": {
+        "ext-json": "*",
+        "ext-mbstring": "^7.2",
         "composer-plugin-api": "^1.0",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "~1.0",
+        "drupal/admin_toolbar": "1.*@dev",
+        "drupal/bootstrap": "3.*@dev",
         "drupal/chartjs_api": "dev-1.x",
         "drupal/chosen": "^2.7",
         "drupal/ckeditor_mentions": "1.*@dev",
@@ -24,8 +28,8 @@
         "drupal/duration_field": "2.*@dev",
         "drupal/dynamic_entity_reference": "2.*@dev",
         "drupal/entity_reference_revisions": "1.*@dev",
-        "drupal/extra_field": "^1.0",
         "drupal/eva": "^2.0",
+        "drupal/extra_field": "^1.0",
         "drupal/facets": "^1.3",
         "drupal/field_group": "dev-3.x",
         "drupal/flat_comments": "dev-master",
@@ -57,7 +61,6 @@
         "drupal/webform_extra_field": "^1.0@alpha",
         "drupal/webform_views": "^5.0@alpha",
         "drupal/xero": "dev-1.x",
-        "drupal/bootstrap": "3.*@dev",
         "drush/drush": "^9.6",
         "ext-json": "*",
         "ext-mbstring": "^7.2",
