--- a/stratoserp_base.info.yml
+++ b/stratoserp_base.info.yml
@@ -3,6 +3,7 @@ type: profile
 description: 'StratosERP base install.'
 version: VERSION
 core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - action
   - block
