--- a/composer.json
+++ b/composer.json
@@ -1,159 +1,128 @@
 {
-    "name": "singularo/stratoserp_base",
-    "description": "StratosERP installation profile",
-    "type": "drupal-profile",
-    "homepage": "https://github.com/singularo/stratoserp_base",
-    "license": "GPL-2.0+",
-    "repositories": [
-        { "type": "composer", "url": "https://packages.drupal.org/8" },
-        { "type": "composer", "url": "https://asset-packagist.org" },
-        { "type": "vcs", "url": "https://github.com/previousnext/drush_cmi_tools.git" },
-        { "type": "vcs", "url": "https://github.com/singularo/flat_comments.git" }
+  "name": "singularo/stratoserp_base",
+  "description": "StratosERP installation profile",
+  "type": "drupal-profile",
+  "homepage": "https://github.com/singularo/stratoserp_base",
+  "license": "GPL-2.0+",
+  "repositories": [
+    { "type": "composer", "url": "https://packages.drupal.org/8" },
+    { "type": "composer", "url": "https://asset-packagist.org" },
+    { "type": "vcs", "url": "https://github.com/singularo/flat_comments.git" }
+  ],
+  "require": {
+    "php": ">=7.4",
+    "ext-json": "*",
+    "ext-mbstring": "*",
+    "ext-posix": "*",
+    "composer-plugin-api": "^1.1 || ^2",
+    "composer/semver": "^1.4",
+    "cweagans/composer-patches": "~1.0",
+    "drupal/admin_toolbar": "^2.2",
+    "drupal/bootstrap4": "^2.0",
+    "drupal/chosen": "^2.9",
+    "drupal/ckeditorheight": "^1.8",
+    "drupal/core": "^9",
+    "drupal/core-composer-scaffold": "^9",
+    "drupal/core-recommended": "^9",
+    "drupal/duration_field": "^2.0",
+    "drupal/dynamic_entity_reference": "^1.10",
+    "drupal/eva": "^2.0",
+    "drupal/extra_field": "^1.2",
+    "drupal/field_group": "^3.0",
+    "drupal/flat_comments": "dev-master",
+    "drupal/fullcalendar_view": "^2.6",
+    "drupal/geolocation": "^3.2",
+    "drupal/hook_event_dispatcher": "^2.0",
+    "drupal/multiple_fields_remove_button": "1.*@dev",
+    "drupal/pathauto": "^1.8",
+    "drupal/search_api": "^1.17",
+    "drupal/serial": "dev-1.x",
+    "drupal/token": "^1.7",
+    "drupal/tvi": "^1.0@beta",
+    "drupal/twig_tweak": "^3.0",
+    "drupal/views_bulk_operations": "^3.6",
+    "drupal/views_data_export": "^1.0@dev",
+    "drupal/webform": "^6.0",
+    "drupal/webform_views": "^5.0@alpha",
+    "drupal/xero": "^1.2",
+    "drush/drush": "^10.0",
+    "harvesthq/chosen": "^1.8",
+    "oomphinc/composer-installers-extender": "^1.1",
+    "symfony/filesystem": "^4.4",
+    "vlucas/phpdotenv": "^4.0",
+    "webflo/drupal-finder": "^1.0.0",
+    "webmozart/path-util": "^2.3",
+    "zaporylie/composer-drupal-optimizations": "^1.0"
+  },
+  "conflict": {
+    "drupal/drupal": "*"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "discard-changes": true,
+    "platform": {
+      "php": "7.4"
+    },
+    "sort-packages": true
+  },
+  "extra": {
+    "composer-exit-on-patch-failure": true,
+    "drupal-scaffold": {
+      "locations": {
+        "web-root": "web/"
+      },
+      "allowed-packages": ["singularo/shepherd-drupal-scaffold"]
+    },
+    "installer-types": [
+      "bower-asset",
+      "npm-asset",
+      "library"
     ],
-    "require": {
-        "composer-plugin-api": "^1.0",
-        "composer/installers": "^1.2",
-        "cweagans/composer-patches": "~1.0",
-        "drupal/admin_toolbar": "1.*@dev",
-        "drupal/bootstrap": "3.*@dev",
-        "drupal/chartjs_api": "dev-1.x",
-        "drupal/chosen": "^2.7",
-        "drupal/ckeditorheight": "dev-1.x",
-        "drupal/core": "^8.8",
-        "drupal/date_popup": "^1.0",
-        "drupal/drush_cmi_tools": "dev-8.x-2.x",
-        "drupal/duration_field": "2.*@dev",
-        "drupal/dynamic_entity_reference": "2.*@dev",
-        "drupal/eva": "^2.0",
-        "drupal/extra_field": "^1.0",
-        "drupal/facets": "^1.3",
-        "drupal/field_group": "dev-3.x",
-        "drupal/flat_comments": "dev-master",
-        "drupal/fullcalendar_view": "2.*@dev",
-        "drupal/geolocation": "1.*@dev",
-        "drupal/hook_event_dispatcher": "1.*@dev",
-        "drupal/json_field": "^1.0@RC",
-        "drupal/libraries": "3.*@dev",
-        "drupal/linkit": "5.*@dev",
-        "drupal/log_stdout": "1.*@dev",
-        "drupal/multiple_fields_remove_button": "1.*@dev",
-        "drupal/nice_menus": "^1.0@beta",
-        "drupal/pathauto": "1.*",
-        "drupal/pdf_api": "^1.0",
-        "drupal/printable": "dev-1.x",
-        "drupal/r4032login": "^1.1",
-        "drupal/realname": "^1.0",
-        "drupal/reference_table_formatter": "1.*@dev",
-        "drupal/search_api": "^1.12",
-        "drupal/serial": "dev-1.x",
-        "drupal/simplify": "1.*@dev",
-        "drupal/themable_forms": "1.*@dev",
-        "drupal/token": "1.*",
-        "drupal/tvi": "^1.0@beta",
-        "drupal/twig_tweak": "2.*",
-        "drupal/views_aggregator": "dev-1.x",
-        "drupal/views_bulk_operations": "^2.5",
-        "drupal/views_data_export": "^1.0",
-        "drupal/webform": "5.*@dev",
-        "drupal/webform_extra_field": "^1.0@alpha",
-        "drupal/webform_views": "^5.0@alpha",
-        "drupal/xero": "dev-1.x",
-        "drush/drush": "^10.0",
-        "ext-json": "*",
-        "ext-mbstring": "^7.2",
-        "harvesthq/chosen": "^1.8",
-        "oomphinc/composer-installers-extender": "^1.1",
-        "vlucas/phpdotenv": "^4.0",
-        "webflo/drupal-finder": "^1.0.0",
-        "webmozart/path-util": "^2.3",
-        "zaporylie/composer-drupal-optimizations": "^1.0"
+    "installer-paths": {
+      "web/core": ["type:drupal-core"],
+      "web/libraries/{$name}": [
+        "type:drupal-library",
+        "type:bower-asset",
+        "type:npm-asset",
+        "harvesthq/chosen"
+      ],
+      "web/modules/contrib/{$name}": ["type:drupal-module"],
+      "web/profiles/contrib/{$name}": ["type:drupal-profile"],
+      "web/themes/contrib/{$name}": ["type:drupal-theme"],
+      "drush/contrib/{$name}": ["type:drupal-drush"]
     },
-    "conflict": {
-        "drupal/drupal": "*"
+    "preserve-paths": [
+      "web/sites"
+    ],
+    "patches": {
+      "drupal/chartjs_api": {
+        "Line graph coloring doesn't work - fixed with upgrade to 2.8.0": "https://www.drupal.org/files/issues/2019-05-09/3053642-2.chartjs_api.Line-graph-coloring-doesnt-work--fixed-with-upgrade-to-280.patch"
+      },
+      "drupal/chosen": {
+        "Chosen field should force height to auto": "https://www.drupal.org/files/issues/Issue-2839655-by-hass-Chosen-field-should-force-heig.patch"
+      },
+      "drupal/core": {
+        "Migrate exceptions need line details": "https://www.drupal.org/files/issues/2018-05-04/2969551.drupal.migrate-exceptions-missing-file-line.patch"
+      },
+      "drupal/dynamic_entity_reference": {
+        "Allow users to select a bundle": "https://www.drupal.org/files/issues/2018-10-28/dynamic_entity_reference-select-per_bundle-2381991-9.patch"
+      },
+      "drupal/eva": {
+        "Drupal 9 readiness": "https://www.drupal.org/files/issues/2020-05-21/3042832-13.patch"
+      },
+      "drupal/extra_field": {
+        "Allow form extra fields to be declared through ExtraField plugins": "https://www.drupal.org/files/issues/2019-01-17/extra_field-using_in_forms-2882061-24.patch"
+      },
+      "drupal/serial": {
+        "Support migrating existing values": "./patches/2946075.patch"
+      },
+      "drupal/webform_extra_field": {
+        "Drupal 9 readiness": "https://www.drupal.org/files/issues/2020-01-15/drupal_9_webform_extra_field_3106626_0.patch"
+      }
     },
-    "minimum-stability": "dev",
-    "config": {
-      "bin-dir": "bin/",
-      "discard-changes": true,
-        "platform": {
-            "php": "7.2"
-        },
-      "sort-packages": true
-    },
-    "extra": {
-        "patchLevel": {
-            "drupal/core": "-p2"
-        },
-        "installer-types": [
-            "bower-asset",
-            "npm-asset",
-            "library"
-        ],
-        "installer-paths": {
-            "web/core": [
-                "type:drupal-core"
-            ],
-            "web/libraries/{$name}": [
-                "type:drupal-library",
-                "type:bower-asset",
-                "type:npm-asset",
-                "harvesthq/chosen"
-            ],
-            "web/modules/contrib/{$name}": [
-                "type:drupal-module"
-            ],
-            "web/profiles/contrib/{$name}": [
-                "type:drupal-profile"
-            ],
-            "web/themes/contrib/{$name}": [
-                "type:drupal-theme"
-            ],
-            "drush/contrib/{$name}": [
-                "type:drupal-drush"
-            ]
-        },
-        "drupal-scaffold": {
-             "initial": {
-                 "sites/default/default.services.yml": "sites/default/services.yml",
-                 "sites/default/default.settings.php": "sites/default/settings.php"
-             }
-        },
-        "preserve-paths": [
-            "web/sites"
-        ],
-        "composer-exit-on-patch-failure": true,
-        "patches": {
-            "drupal/chartjs_api": {
-                "Line graph coloring doesn't work - fixed with upgrade to 2.8.0": "https://www.drupal.org/files/issues/2019-05-09/3053642-2.chartjs_api.Line-graph-coloring-doesnt-work--fixed-with-upgrade-to-280.patch"
-            },
-            "drupal/chosen": {
-                "Chosen field should force height to auto": "https://www.drupal.org/files/issues/Issue-2839655-by-hass-Chosen-field-should-force-heig.patch"
-            },
-            "drupal/core": {
-                "Add __toString to the entity Query class": "https://www.drupal.org/files/issues/2018-07-02/2902311-16.patch",
-                "Migrate exceptions need line details": "https://www.drupal.org/files/issues/2018-05-04/2969551.drupal.migrate-exceptions-missing-file-line.patch"
-            },
-            "drupal/duration_field": {
-              "Support the #date_increment property in the 'duration' form element": "https://www.drupal.org/files/issues/2018-12-14/3020676-6.duration_date_increment.full_.patch"
-            },
-            "drupal/dynamic_entity_reference": {
-              "Allow users to select a bundle": "https://www.drupal.org/files/issues/2018-10-28/dynamic_entity_reference-select-per_bundle-2381991-9.patch"
-            },
-            "drupal/extra_field": {
-                "Allow form extra fields to be declared through ExtraField plugins": "https://www.drupal.org/files/issues/2019-01-17/extra_field-using_in_forms-2882061-24.patch"
-            },
-            "drupal/pdf_api": {
-                "Set MPDF generation directory to drupals tmp directory": "https://www.drupal.org/files/issues/2019-01-31/tmp-directory-3016161-4.patch"
-            },
-            "drupal/printable": {
-                "Set default print storage path": "./patches/printable.patch"
-            },
-            "drupal/serial": {
-                "Support migrating existing values": "./patches/2946075.patch"
-            },
-            "drupal/views_bulk_operations": {
-                "Input/Label Javascript broken for other themes": "https://www.drupal.org/files/issues/2019-02-21/3034916-input-label-javascript-broken-for-other-themes-2.patch"
-            }
-        }
+    "patchLevel": {
+      "drupal/core": "-p2"
     }
+  }
 }
